--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-vendor/
+tmp/
 
 # Project binary
 kube-events-exporter
