--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,22 +1,21 @@
 run:
-  timeout: 2m
+  timeout: 5m
 
 linters:
+  disable-all: true
   enable:
-    - megacheck
+    - deadcode
+    - errcheck
+    - goconst
+    - gofmt
+    - goimports
+    - gosimple
     - govet
-  disable:
-    - maligned
-    - prealloc
-  disable-all: false
-  presets:
-    - bugs
-    - unused
-  fast: false
-
-linters-settings:
-  goimports:
-    local-prefixes: github.com/rhobs/kube-events-exporter
+    - ineffassign
+    - staticcheck
+    - structcheck
+    - typecheck
+    - varcheck
 
 issues:
   exclude-use-default: false
