--- a/manifests/kube-events-exporter-deployment.yaml
+++ b/manifests/kube-events-exporter-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: events-exporter
     app.kubernetes.io/name: kube-events-exporter
-    app.kubernetes.io/version: 0.1.0
+    app.kubernetes.io/version: v0.1.0
   name: kube-events-exporter
   namespace: default
 spec:
@@ -18,10 +18,10 @@ spec:
       labels:
         app.kubernetes.io/component: events-exporter
         app.kubernetes.io/name: kube-events-exporter
-        app.kubernetes.io/version: 0.1.0
+        app.kubernetes.io/version: v0.1.0
     spec:
       containers:
-      - image: quay.io/dgrisonnet/kube-events-exporter:latest
+      - image: quay.io/dgrisonnet/kube-events-exporter:v0.1.0
         name: kube-events-exporter
         ports:
         - containerPort: 8080
