examples: add limited configuration example
Signed-off-by: Damien Grisonnet <dgrisonn@redhat.com>

--- a/examples/basic/kube-events-exporter-deployment.yaml
+++ b/examples/basic/kube-events-exporter-deployment.yaml
@@ -21,7 +21,8 @@ spec:
         app.kubernetes.io/version: 0.1.0
     spec:
       containers:
-      - image: quay.io/dgrisonnet/kube-events-exporter:v0.1.0
+      - args: []
+        image: quay.io/dgrisonnet/kube-events-exporter:v0.1.0
         name: kube-events-exporter
         ports:
         - containerPort: 8080
